--- a/assets/css/_start-page.scss
+++ b/assets/css/_start-page.scss
@@ -1,8 +1,8 @@
 .start-page {
 	background: url("../img/welcome-bg.png");
 	background-size: cover;
-	background-position: center bottom;
-	height: 1010px;
+    background-position: 22% bottom;
+	height: 1008px;
 	width: 100%;
 	z-index: -10;
 }
@@ -10,10 +10,10 @@
 .start-page .container{	
 	display: flex;
 	flex-direction: row;
-	align-items: center;
 	justify-content: space-between;
 	padding-top: 145px;
 }
+
 
 .start-page-text {
 	color: #fff;
@@ -45,14 +45,14 @@
     	transform-origin: left;
 	}
 	p {
-    position: absolute;
-  	top: 19%;
-  	font-weight: bold;
+	    position: absolute;
+	  	top: 19%;
+	  	font-weight: bold;
 		font-style: normal;
 		font-size: 200px;
 		color: #fff;
 		transform: scaleX(0.88);
-    transform-origin: left;
+	    transform-origin: left;
 		opacity: 0.1;
 		z-index: -5;
 	}
@@ -63,15 +63,18 @@
 		line-height: 95px;
 	}
 	h4 {
-		padding-top: 30px;
+		padding-top: 40px;
+		
 		font-weight: normal;
 		font-style: normal;
 		font-size: 18px;
+		width: 60%;
 	}
 }
 
 $shadow-width: 6px;
-.reg-button {
+.reg-button,
+.btn {
 	color: #fff;
 	font-family: 'Ubuntu', 'Gothem Pro', sans-serif;
 	font-size: 24px;
@@ -86,6 +89,7 @@ $shadow-width: 6px;
 	border: none;
 	box-shadow: 0px 0px 0px $shadow-width rgba(169, 218,  32, 0.5);
 	
+	cursor: pointer;
 	&:hover {
 		color: #fbfcf7;
 		background-color: #87ab24;
@@ -100,16 +104,30 @@ $shadow-width: 6px;
 		outline: none;
 	}
 }
+.btn {
+    margin: 45px 0 0 0px;	
+}
 
 .inkblot-column {
 	display: flex;
 	flex-direction: column;
-	align-items: center;	
+	align-items: center;
+	justify-content: space-around;
+	height: 690px;
+	height: 700px;
+    margin-top: -60px;
 }
 
 .inkblot {
-	margin-top: 25px;
 	position: relative;
+	height: 190px;
+	
+	img {
+		object-fit: cover;
+		width: inherit;
+		height: inherit;
+	}
+
 	p {
 		color: #fff;
 		font-family: 'Gotham Pro', sans-serif;
@@ -119,6 +137,12 @@ $shadow-width: 6px;
 		position: absolute;
 		text-align: center;
 		line-height: 45px;
+
+		top: 50%;
+	    left: 50%;
+	    transform: translate(-50%, -50%);
+	    position: absolute;
+
 		span {
 			font-family: 'Roboto', sans-serif;;
 			font-weight: bold;
@@ -126,17 +150,6 @@ $shadow-width: 6px;
 			font-size: 80px;
 		}
 	}
-	&:nth-child(1) p{
-		top: 30%;
-    left: 39%;
-
-	}
-	&:nth-child(2) p{
-		top: 28%;
-    left: 19%;
-	}
-	&:nth-child(3) p{
-		top: 33%;
-    left: 27%;
-	}
 }
+
+@import '_start-page-media-queries';
