--- a/assets/css/_description.scss
+++ b/assets/css/_description.scss
@@ -1,17 +1,16 @@
 .description {
-	height: 600px;
-	display: grid;
-	grid-template-columns: 50% 45%;
-	padding: 100px 0px 0px 10px;
-	justify-content: space-between;
-	width: 100%;
-    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 60px 0px 0px 10px;
+    grid-gap: 30px;
 }
 
 .description-text {
-	width: 100%;
     padding-top: 6%;
-	padding-left: calc(100% - 1170px / 2);
+	padding-left: calc(100% - 1150px / 2);
+
+	grid-column-start: 1;
+    grid-row-start: 1;
 	
 	h5 {
 		font-style: normal;
@@ -28,16 +27,66 @@
 	}
 }
 
-.description-image {
-	background: url("../img/conf-example.png");
-	background-size: 100%, 100%;
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 100%;
+
+.description-img img {	
+    object-fit: cover;
+    object-position: left top;
+    width: 100%;
+    justify-self: end;
+
+    grid-column-start: 2;
 }
 
-@media (max-width: 1000px) {
-	.description-image {
-		background-size: 125%, 100%;
+
+@media (max-width: 1024px) {
+	.description {
+		display: block;
+	}
+	.description-img {
+		width: 50%;
+	    /* display: inline-block; */
+	    height: 300px;
+	    float: right;
+	}
+
+	.description img {
+	    object-fit: cover;
+	    // float: right;
+	    height: inherit;
+	    width: 100%;
+	}
+	
+	.description-text {
+		padding-top: 0;
+	    
+		padding-left: 10px;
+		h5 {
+			font-size: 1.3rem;
+			font-weight: 500;
+		}
+		p {
+			font-size: 1rem;
+		}
+	}
+}
+@media (max-width: 768px) {
+	.description-img {
+	    height: 250px;
+	}
+}
+@media (max-width: 450px) {
+	.description-img {
+	    height: 200px;
+	}
+	.description-text {
+		h5 {
+			font-size: 1.2rem;
+		}
+	}
+}
+@media (max-width: 370px) {
+	.description-img {
+	    height: 160px;
+	    width: 40%;
 	}
 }
