--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -1,14 +1,20 @@
+$header-heigth: 60px;
 .header {
 	width: 100%;
 	background-color: #0089a9;
-	height: 60px;
+	height: $header-heigth;
 	position: fixed;
 	z-index: 100;
+	transition: all 0.4s ease-out;
+	
+	.container {
+		height: 100%;
+	}
 }
 
 .header-inner {
 	display: flex;
-	height: 60px;
+	height: 100%;
 	align-items: center;
 	&>a {
 		position: absolute;
@@ -16,36 +22,132 @@
 }
 
 .logo {
-	// float: left;
-	padding-left: 3px;
+	width: 46px;
+	height: 46px;
+	margin-left: 3px;
+	transition: all 0.4s ease-out;
 }
 
 .navbar {
-	width: 780px;
 	margin: 0 auto;
+}
+.navbar ul{
+	margin: 0;
+	padding: 0;
 	display: flex;
-	justify-content: space-between;
 
-	a {		
-	font-family: 'Gotham Pro';
-	font-weight: normal;
-	font-style: normal;
-	font-size: 16px;
-	color: #fff;
-	&:hover {
-		color: #a9da20;
-		transition: color 0.2s ease-out; 
+	li {
+		margin-right: 30px;
+		padding: 0;
+		list-style: none;
+		a {		
+			font-family: 'Gotham Pro';
+			font-weight: normal;
+			font-style: normal;
+			font-size: 16px;
+			color: #fff;
+			position: relative;
+
+			&:hover {
+				color: #a9da20;
+				transition: color 0.2s ease-out; 
+			}
+		}
 	}
+	
+	li:last-child {
+		margin-right: 0;
+	}
+}
+
+.header-opacity {
+    background-color: rgba(0, 137, 169, 0.8);
+}
+
+.dot:before {
+	content: "";
+	background-image: url(../img/green-dot.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 13px;
+    height: 10px;
+    position: absolute;
+    display: inline-block;
+    left: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.burger {
+	display: none;
+	margin-right: 5%;
+	cursor: pointer;
+	div {
+		transition: all 0.5s ease-out;
+		background-color: #fff;
+		width: 25px;
+		height: 3px;
+		margin: 5px;
+		border-radius: 5px;
+	}
+}
+
+
+
+@media (max-width: 960px) {
+	.navbar {
+		position: absolute;
+		right: 0;
+		top: $header-heigth;
+		width: 60%;
+		background-color: rgba(0, 137, 169, 0.8);
+		transform: translateX(100%);
+		transition: transform 0.3s ease-out;
+		ul {
+			height: calc(100vh - 60px);
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-around;
+		}
+		ul li {
+			margin-right: 0;
+			a {
+				font-size: 1rem;
+			}
+		}
+	}
+	.header-inner {
+	    justify-content: space-between;
+	    &>a {
+			position: unset;
+	    }
 	}
 
-	a:nth-child(1):before {
-		content: "";
-	    background-image: url(../img/green-dot.png);
-	    background-size: cover;
-	    width: 13px;
-	    height: 12px;
-	    position: relative;
-	    display: inline-block;
-	    left: -5px;
+	.burger {
+		display: block;
+	}
+}
+
+.navbar-active {
+	transform: translateX(0);
+}
+
+.burger-active {
+	div {
+		margin: 0;
+		width: 15px;
+		height: 2px;
+		background-color: #f5f5f5;
+			}
+	.line1 {
+		transform: rotate(-45deg) translateY(3px);
+	    transform-origin: center top;
+	}
+	.line2 {
+		opacity: 0;
+	}
+	.line3 {
+	    transform: rotate(45deg) translateY(-3px);
+	    transform-origin: center bottom;
 	}
 }
