--- a/assets/css/_main-tracks.scss
+++ b/assets/css/_main-tracks.scss
@@ -1,11 +1,12 @@
 .main-tracks {
+    margin-top: 70px;
 }
 
 .main-tracks > h3 {
 	font-family: 'Gotham Pro';
 	font-weight: 900;
 	font-style: normal;
-	font-size: 60px;
+	font-size: 50px;
 	color: #0089a9;
 	text-align: center;
 }
@@ -18,26 +19,32 @@
 	padding-top: 40px;
 }
 .track {
-	width: 50%;
+	width: 49%;
 	display: flex;
 	align-content: flex-end;
 
-	padding-top: 20px;
+	padding-top: 40px;
 }
 
 .track-icon {
 	position: relative;
-	padding-right: 10px;
-	img:nth-child(1) {
+	margin-right: 10px;
+	width: 168px;
+    height: 168px;
 
+	img  {
+	    width: inherit;
+	    height: inherit;
+	    object-fit: contain;
 	}
+	
 	img:nth-child(2) {
 		position: absolute;
- 		top: 13%;
-	    left: 20%;
-	    width: 100px;
-	    height: auto;
-	    fill: #fff;
+ 		top: 50%;
+	    left: 50%;
+	    transform: translate(-50%, -50%);
+	    height: 60%;
+   	 	width: 60%;
 	    filter: invert(1);
 	}
 }
@@ -47,7 +54,7 @@
 	color: #000;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
 	h5 {
 		font-family: 'Gotham Pro';
 		font-weight: 500;
@@ -59,20 +66,78 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 18px;
-		margin-top: 40px;
+		margin-top: 20px;
 	}
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {	
+	.track {
+		display: unset;
+	}
+	.track-icon {
+		float: left;
+	    shape-outside: circle(50%);
+	    width: 130px;
+	    height: 130px;
+	}
+
+	.track-text {
+	    display: unset;
+	    flex-direction: unset;
+
+	    h5 {
+	    	font-size: 1.3rem;
+	    }
+	    p {
+	    	font-size: 1rem;
+	    }
+	}
+}
+
+
+@media (max-width: 768px) {
+	.main-tracks h3{
+		font-size: 40px;
+	}
 	.main-tracks .container {
 		display: flex;
 	    align-content: center;
 	    align-items: center;
 	    flex-wrap: nowrap;
 	    flex-direction: column;
+	    padding-top: 0;
 	}
 	.track {
-		width: 80%;
-		margin-top: 20px;
+		width: 100%;
+		display: unset;
+	}
+	.track-icon {
+		float: left;
+	    width: 110px;
+	    height: 110px;
+	}
+
+	.track-text {
+	    display: unset;
+	    flex-direction: unset;
+	}
+}
+
+@media (max-width: 450px) {
+	.main-tracks h3{
+		font-size: 35px;
+	}
+
+	.track-icon {
+	    width: 85px;
+	    height: 85px;
+	}
+	.track-text {
+	    display: unset;
+	    flex-direction: unset;
+
+	    h5 {
+	    	font-size: 1.2rem;
+	    }
 	}
 }
