--- a/assets/css/_speakers.scss
+++ b/assets/css/_speakers.scss
@@ -1,29 +1,31 @@
 .speakers {
-	margin: 160px auto;
+	margin: 100px auto 0 auto;
 	color: black;
 }
 
 .speakers .container {
 	padding: 0 15px;
+	position: relative;
 
-	h3 {
-		font-family: 'Gotham Pro', sans-serif;
-		font-weight: 900;
-		font-style: normal;
-		font-size: 60px;
-		color: #0089a9;
-	    text-align: center;
-	    padding-bottom: 40px;
+}
+.speakers .container h3, 
+.section-title {
+	font-family: 'Gotham Pro', sans-serif;
+	font-weight: 900;
+	font-style: normal;
+	font-size: 50px;
+	color: #0089a9;
+    text-align: center;
+    padding-bottom: 40px;
 
-	}
 }
 
 .item {
 	position: relative;
 	background: #fff;
 	border-radius: 5px;
+
 	&:hover{
-		// background: linear-gradient(-141deg, #00c0c0, #0089a9);
 		.item-text{
 			display: block !important;
 		}
@@ -41,10 +43,23 @@
 		background: linear-gradient(-141deg, #00c0c0, #0089a9);
 		border-radius: 5px;
 		opacity: 0.78;
-		// display: none;
 	}
-
 }
+
+.owl-theme .owl-dots .owl-dot span {
+	width: 10px;
+    height: 10px;
+    margin: 5px 7px;
+    background: #0097a8;
+}
+
+.item-img {
+	background-size: cover;
+    background-position: center 25%;
+    border-radius: 5px;
+    height: 375px;
+}
+
 $margin-out-in: 24px;
 .item-text {
 	position: absolute;		
@@ -64,8 +79,9 @@ $margin-out-in: 24px;
 		border: none;
 	    background-color: #fff;
 	    color: #fff; 
-	    height: 1px; 
+	    height: 1px;
 	    margin: $margin-out-in 0;
+	    transition: all 1s ease-out;
 	}
 	p {
 		font-family: 'Gotham Pro', sans-serif;
@@ -75,3 +91,74 @@ $margin-out-in: 24px;
 		margin-bottom: $margin-out-in + 6;
 	}
 }
+
+
+.owl-dot, .owl-prev, .owl-next {
+	&:focus {
+		outline: none;
+	}
+}
+
+.nav-arrow {
+	position: absolute;
+    transform: translateY(-10%);
+	top: 50%;
+	bottom: 50%;
+}
+.prev-arrow {	
+    left: -3%;
+}
+
+.next-arrow {
+    right: -3%;	
+}
+
+@media (max-width: 1290px) {
+	.nav-arrow { 
+		display: none;
+	}
+}
+
+@media (max-width: 1150px) {
+	.item {
+	}
+	.owl-theme .owl-dots .owl-dot span {
+		width: 12px;
+		height: 12px;
+	}
+}
+
+@media (max-width: 768px) {
+	.speakers {
+		margin: 70px auto 0 auto;
+	}
+	.speakers .container {
+		h3 {
+			font-size: 40px;
+		}
+	}
+	.item {
+		
+		&:after {
+			transition: none;
+		}
+	}
+	.item-img {
+		height: 415px;
+	}	
+	
+	.section-title {
+		font-size: 40px;
+	}
+
+}
+
+@media (max-width: 450px) {
+	.item-img {
+		height: 450px;
+	    margin: 0 auto;
+	}
+	.section-title {
+		font-size: 35px;
+	}
+}	
