--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@ body {
 	font-family: 'Gotham Pro', sans-serif;
 	margin: 0;
 	background-color: #fff;
+	line-height: 1.1;
 }
 
 .container {
@@ -27,3 +28,7 @@ a {
 @import 'description';
 @import 'main-tracks';
 @import 'speakers';
+@import 'at-conference';
+@import 'buy-tickets';
+@import 'partners';
+@import 'footer';
